samples/_failures_safe/1761247075_63e71a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44a11552.c: In function ‘main’:
./samples/SAFE/__tmp_44a11552.c:134: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_44a11552.c:133:5: error: expected declaration or statement at end of input
  133 |     if
      |     ^~
